--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,8 @@
 <resources>
     <string name="app_name">Login page</string>
+    <string name="zip_code">Zip Code</string>
+    <string name="city">City</string>
+    <string name="turn_on_gps">Turn On GPS</string>
+    <string name="zip_code_number">Zip Code Number</string>
+    <string name="city_name">City Name</string>
 </resources>
