added a new activity which prompt the user to enter the zip code, city, or turn on GPS

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -5,4 +5,5 @@
     <string name="turn_on_gps">Turn On GPS</string>
     <string name="zip_code_number">Zip Code Number</string>
     <string name="city_name">City Name</string>
+    <string name="or">Or</string>
 </resources>
