--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,7 @@
 <resources>
     <string name="app_name">Login page</string>
+    <string name="tutorial">Tutorial</string>
+    <string name="background_image">background image</string>
+    <string name="welcome_to_ailses">Welcome to Ailses</string>
+    <string name="get_started">Get Started</string>
 </resources>
