--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,4 +4,7 @@
     <string name="background_image">background image</string>
     <string name="welcome_to_ailses">Welcome to Ailses</string>
     <string name="get_started">Get Started</string>
+    <string name="background_image">background image</string>
+    <string name="welcome_to_ailses">Welcome to Ailses</string>
+    <string name="get_started">Get Started</string>
 </resources>
