--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -23,4 +23,9 @@
     </string>
     <string name="attachment_summary_off">Only download attachments when manually requested</string>
     <string name="search">Search</string>
+    <string name="ailses">Ailses</string>
+    <string name="ailses">Ailses</string>
+    <string name="menu">Menu</string>
+    <string name="settings">Settings</string>
+    <string name="help">Help</string>
 </resources>
