--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -29,4 +29,5 @@
     <string name="menu">Menu</string>
     <string name="settings">Settings</string>
     <string name="help">Help</string>
+    <string name="enter">Enter</string>
 </resources>
